@@ -1,3 +1,7 @@
+1999-08-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* VarProbe.m: Accomodate c_* renames in defobj/directory.m throughout.
+
 1999-08-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* VarProbe.m ([VarProbe -probeAsString:Buffer:withFullPrecision:],
